# sbcc-rehber

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .zenodo.json  AI-AUTHORSHIP.md  CATALOG.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.tr.md  LICENSE  README.md  README.tr.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/agentic-session-debugger/: SKILL.md
.claude/skills/ai-disclosure-auditor/: SKILL.md
.claude/skills/apa-doi-verifier/: SKILL.md
.claude/skills/bilingual-booklet-pairing/: SKILL.md
.claude/skills/ethics-irb-ai-protocol/: SKILL.md
.claude/skills/memory-vault-architect/: SKILL.md
.claude/skills/rebuttal-traceability-matrix/: SKILL.md
.claude/skills/regional-access-workflow/: SKILL.md
.claude/skills/repo-release-integrity-check/: SKILL.md
.claude/skills/social-science-literature-triage/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  citation_correction.yml  config.yml  content_correction.yml
.github/workflows/: ci.yml  citation-check.yml  link-check.yml  pages.yml  publish-pypi.yml  secret-scan.yml
booklets/001-foundations/001-01-0001/: en.md  tr.md
booklets/001-foundations/001-01-0002/: en.md  tr.md
booklets/001-foundations/001-01-0003/: en.md  tr.md
booklets/001-foundations/001-01-0004/: en.md  tr.md
booklets/002-academic-access/002-04-0001/: en.md  tr.md
booklets/003-memory-system/003-01-0001/: en.md  tr.md
booklets/004-vault-architecture/004-01-0001/: en.md  tr.md
booklets/007-academic-writing/007-02-0001/: en.md  tr.md
booklets/009-ethics-irb/: .gitkeep
meta/: ai-disclosure.md  contributors.md  pypi-pending-publisher.md  roadmap.md  social-cc-plugin.md
paper/: paper.bib  paper.md
scripts/: README.md  check-dois.mjs  validate-repo.mjs
src/social_cc_plugin/: __init__.py  cli.py
template/: booklet-template.en.md  booklet-template.tr.md
tests/: test_cli.py
web/: index.html
(+10 files in other folders)
