[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "social-cc-plugin"
version = "2.1.0"
description = "Install the Claude Code for Social Scientists project skills into your Claude configuration."
readme = "meta/social-cc-plugin.md"
requires-python = ">=3.9"
license = "Apache-2.0 AND CC-BY-NC-SA-4.0"
license-files = ["LICENSE.code", "LICENSE.content"]
authors = [{ name = "Onour Impram" }]
keywords = [
  "claude-code",
  "social-science",
  "academic-writing",
  "research-methods",
  "skills",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TheGoatPsy/claude-code-for-social-scientists"
Repository = "https://github.com/TheGoatPsy/claude-code-for-social-scientists"
Documentation = "https://github.com/TheGoatPsy/claude-code-for-social-scientists#project-skills"
Issues = "https://github.com/TheGoatPsy/claude-code-for-social-scientists/issues"

[project.scripts]
social-cc = "social_cc_plugin.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/social_cc_plugin"]

[tool.hatch.build.targets.wheel.force-include]
".claude/skills" = "social_cc_plugin/skills"

[tool.hatch.build.targets.sdist]
include = [
  "src/social_cc_plugin",
  ".claude/skills",
  "meta/social-cc-plugin.md",
  "LICENSE.code",
  "LICENSE.content",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
